# chimaera-files

./: .gitattributes  .gitignore  Cargo.toml  README.md  UPDATES.md  index.html  package.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
crates/common/: Cargo.toml
crates/common/src/: lib.rs  schema.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: db.rs  fts.rs  journal_watcher.rs  lib.rs  main.rs  search.rs  stats.rs  usn.rs  walker.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: main.rs
src/: App.css  App.tsx  api.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: archive.rs  commands.rs  drive_watcher.rs  file_ops.rs  indexer_worker.rs  lib.rs  main.rs  settings.rs  shell_integration.rs  state.rs  terminal.rs  watcher.rs
src/components/: CodePreview.tsx  ContextMenu.tsx  DetailsPanel.tsx  FileList.tsx  Launcher.tsx  ListItem.tsx  MarkdownPreview.tsx  PathBar.tsx  PreviewPanel.tsx  ResizeHandle.tsx  Settings.tsx  ShortcutsPanel.tsx  Sidebar.tsx  Terminal.tsx  TitleBar.tsx  Toolbar.tsx
src/hooks/: useAnimations.ts  useFileNavigation.ts  useFileUrl.ts
src/utils/: format.ts  match.ts  updater.ts
src/workers/: highlight.worker.ts
