[package]
name = "chimaera-files"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "chimaera-files"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chimaera-common = { path = "../crates/common" }
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-single-instance = "2"
tauri-plugin-global-shortcut = "2"
portable-pty = "0.9"
zip = "2"
base64 = "0.22"
tauri-plugin-opener = "2"
chimaera-indexer = { path = "../crates/indexer" }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
dirs = "6"
open = "5"
window-vibrancy = "0.5"
trash = "5"
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem"] }
notify = "7"
notify-debouncer-mini = "0.5"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
