[package]
name = "chimaera-indexer"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "chimaera-indexer"
path = "src/main.rs"

[dependencies]
chimaera-common = { path = "../common" }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
walkdir = { workspace = true }
rayon = { workspace = true }
dirs = "6"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_Storage_FileSystem",
] }
